syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "org.ctoader.medium";
option java_outer_classname = "CharacterWrapper";

message Character {
    int64 id = 1;
    string name = 2;
    int32 height = 3;
    double mass = 4;
    repeated string hair_color = 5;
    repeated string skin_color = 6;
    string eye_color = 7;
    string birth_year = 8;
    string gender = 9;
    string homeworld = 10;
    string species = 11;
}

message CharacterFilter {
    string homeworld = 1;
}

service CharacterService {
    rpc findAll(google.protobuf.Empty) returns (stream Character) {}
    rpc findByFilter(CharacterFilter) returns (stream Character) {}
}